# DreamTeam

./: .gitignore  COMMANDS.md  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.cursor/: AGENTS.md
.cursor/agents/: auditor.md  dev-experiencer.md  developer.md  fix-planner.md  git-ops.md  learning.md  meta-planner.md  orchestrator-left.md  orchestrator-main.md  orchestrator-right.md  orchestrator-sub.md  orchestrator.md  planner-sub.md  planner.md  researcher.md  reviewer.md  terminal.md
.cursor/commands/: run.md  start.md
.cursor/rules/: autonomous-dev-system.mdc  subagents.mdc  task-execution.mdc
docs/: EMPTY_PROJECT_SETUP.md  GITHUB_PUBLISH.md  GIT_WORKTREES.md  INSTRUCTIONS.md  QUICK_START_AGENT.md  RUNNING_1000_TASKS.md
dreamteam/: __init__.py  __main__.py  bootstrap_rules.txt  cli.py  db_bridge.py  mcp_server.py
guide/: COMMANDS.md  INSTALL.md  INSTRUCTIONS.md  README.md
scripts/: add_task.py  auditor.py  check_memory.py  context_graph.py  current_project.py  db.py  db_utils.py  get_dev_experience_history.py  get_task.py  git_commit.py  init_db.py  init_dev_experience.py  memory_get.py  memory_set.py  memory_to_files.py  meta_planner.py  new_project.py  project.py  recent_tasks.py  record_dev_experience.py  recover.py  researcher.py  run_next.py  scheduler.py  set_goal.py  sync_tasks.py  task_counter.py  triggers.py  update_task.py  vector_index.py  vector_search.py  verify_integrity.py  verify_tasks.py
tests/: conftest.py  test_db_pipeline.py  test_parse_task.py  test_project.py  test_scheduler.py
(+8 files in other folders)
